네비게이션 기능 추가. 경로 잘 못잡아냄..ㅜ

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Eyesone</string>
+    <string name="google_maps_key">AIzaSyCRmidlm35d9b3axL3gnJpCgIu38XYSHug</string>
 </resources>
